--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,7 @@
 fastapi==0.104.1
 uvicorn==0.24.0
+google-generativeai==0.3.2
 python-multipart==0.0.6
 python-dotenv==1.0.0
-google-generativeai==0.3.2
+pypdf2==3.0.1
+reportlab==4.0.4
